// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlockSwitcherDropdownMenu should render disabled block switcher with multi block of different types when no transforms 1`] = `
<div>
  <div
    class="components-toolbar"
  >
    <div>
      <button
        aria-label="Block Name"
        class="components-button components-toolbar__control block-editor-block-switcher__no-switcher-icon has-icon"
        data-toolbar-item="true"
        disabled=""
        type="button"
      >
        <span
          class="block-editor-block-icon has-colors"
        >
          <svg
            aria-hidden="true"
            focusable="false"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M5 4.5h11a.5.5 0 0 1 .5.5v11a.5.5 0 0 1-.5.5H5a.5.5 0 0 1-.5-.5V5a.5.5 0 0 1 .5-.5ZM3 5a2 2 0 0 1 2-2h11a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5Zm17 3v10.75c0 .69-.56 1.25-1.25 1.25H6v1.5h12.75a2.75 2.75 0 0 0 2.75-2.75V8H20Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`BlockSwitcherDropdownMenu should render enabled block switcher with multi block when transforms exist 1`] = `
<div>
  <div
    class="components-toolbar"
  >
    <div
      class="components-dropdown components-dropdown-menu block-editor-block-switcher"
      tabindex="-1"
    >
      <button
        aria-describedby="components-button__description-2"
        aria-expanded="false"
        aria-haspopup="true"
        aria-label="Multiple blocks selected"
        class="components-button components-dropdown-menu__toggle has-icon"
        data-toolbar-item="true"
        type="button"
      >
        <span
          class="block-editor-block-icon block-editor-block-switcher__toggle has-colors"
        />
      </button>
      <div
        class="components-visually-hidden emotion-0 emotion-1"
        data-wp-c16t="true"
        data-wp-component="VisuallyHidden"
        style="border: 0px; clip: rect(1px, 1px, 1px, 1px); clip-path: inset( 50% ); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; word-wrap: normal;"
      >
        <span
          id="components-button__description-2"
        >
          Change type of 2 blocks
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`BlockSwitcherDropdownMenu should render switcher with blocks 1`] = `
<div>
  <div
    class="components-toolbar"
  >
    <div
      class="components-dropdown components-dropdown-menu block-editor-block-switcher"
      tabindex="-1"
    >
      <button
        aria-describedby="components-button__description-0"
        aria-expanded="false"
        aria-haspopup="true"
        aria-label="Block Name"
        class="components-button components-dropdown-menu__toggle has-icon"
        data-toolbar-item="true"
        type="button"
      >
        <span
          class="block-editor-block-icon block-editor-block-switcher__toggle has-colors"
        />
      </button>
      <div
        class="components-visually-hidden emotion-0 emotion-1"
        data-wp-c16t="true"
        data-wp-component="VisuallyHidden"
        style="border: 0px; clip: rect(1px, 1px, 1px, 1px); clip-path: inset( 50% ); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; word-wrap: normal;"
      >
        <span
          id="components-button__description-0"
        >
          Change block type or style
        </span>
      </div>
    </div>
  </div>
</div>
`;
